<resources>
    <string name="app_name">Peaky Finders</string>

    <!-- The names for each activity, used to go to each activity -->
    <string name="START_ACTIVITY">com.example.recogniselocation.thirdyearproject.START</string>
    <string name="PHOTO_ACTIVITY">com.example.recogniselocation.thirdyearproject.PHOTO</string>
    <string name="MAP_ACTIVITY">com.example.recogniselocation.thirdyearproject.MAP</string>
    <string name="GRAPH_ACTIVITY">com.example.recogniselocation.thirdyearproject.GRAPH</string>
    <string name="title_start">Peaky Finders</string>
    <string name="title_photo">Photo</string>
    <string name="title_map">Map</string>
    <string name="title_graph">Graph</string>

    <!-- Start Screen Strings -->
    <string name="camera">Detect whats ahead of you</string>
    <string name="demo1">Run the first demo</string>
    <string name="demo2">Run the second demo</string>
    <string name="demo3">Run the third demo</string>
    <string name="demo4">Run the fourth demo</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>

    <string name="url_start">https://maps.googleapis.com/maps/api/elevation/json?path=</string>
    <string name="loading_msg">"Recognising your location&#8230;"</string>

    <!-- Photo Activity -->
    <string name="image_button_description">Button with the horizon detected. Click to show result of different sized masks</string>

    <!-- Map Activity -->
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>

    <!-- Graph Activity-->

</resources>
