<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start"
    android:weightSum="1">

    <ImageButton
        android:id="@+id/camera"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/camera"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/demo1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/camera"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@id/demo2"
        android:background="@color/colorAccent"
        android:contentDescription="@string/demo1"
        android:fontFamily="casual"
        android:onClick="buttonClicked"
        android:text="@string/one"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/demo2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/demo2"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:text="@string/two"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/camera"
        android:layout_toStartOf="@id/centre"
        android:layout_marginEnd="15dp"
        android:onClick="buttonClicked"/>

    <Space
        android:id="@+id/centre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/demo3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/demo3"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:text="@string/three"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/camera"
        android:layout_toEndOf="@id/centre"
        android:layout_marginStart="15dp"
        android:onClick="buttonClicked"
        />


    <Button
        android:id="@+id/demo4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/demo4"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        android:text="@string/four"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/camera"
        android:layout_toEndOf="@id/demo3"
        android:layout_marginStart="30dp"
        android:onClick="buttonClicked"/>

</RelativeLayout>