<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActGraph">

    <Button
        android:id="@+id/back"
        style="?attr/buttonStyle"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="buttonClicked"
        android:text="@string/title_start" />

    <Button
        android:id="@+id/before"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="buttonClicked"
        android:text="@string/title_map" />

    <Button
        android:id="@+id/next"
        style="?attr/buttonStyle"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="buttonClicked"
        android:text="@string/title_photo" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>